# shinkoku

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: system-overview.md
skills/e-bookkeeping-compliance/: SKILL.md
skills/setup/: SKILL.md
skills/tax-advisor/reference/: electronic-bookkeeping.md
src/shinkoku/: models.py
src/shinkoku/cli/: __init__.py  ledger.py  pdf.py
src/shinkoku/tools/: import_data.py  ledger.py  pdf.py
tests/helpers/: db_helpers.py
tests/scripts/: test_ledger.py  test_pdf.py
tests/unit/: test_db.py  test_pdf.py
